package com.lld.interviewquestions.elevator.enums;

public enum ElevatorDirection {
    UP,
    DOWN,
    IDLE;
}
